moving PaginatedResponse.java to dto package and adding @RequestMapping("/api/users") over the controller